--- a/index.html
+++ b/index.html
@@ -4,31 +4,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="./resources/images/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="./resources/css/main.css" />
+
   <title>Frontend Mentor | Ping coming soon page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <header>
+    <img alt="Ping" src="./resources/images/logo.svg" />
+  </header>
 
-  We are launching soon!
+  <main>
 
-  Subscribe and get notified
+    <h1>We are launching <strong>soon!</strong></h1>
+    <p>Subscribe and get notified</p>
 
-  Notify Me
+    <form action="" method="post">
+      <input type="email" id="email" name="email" placeholder="Your email address..." />
+      <p class="error-message" id="email-error">Please provide a valid address</p>
+      <button type="submit">Notify Me</button>
+    </form>
 
-  &copy; Copyright Ping. All rights reserved.
+    <img alt="" src="./resources/images/illustration-dashboard.png" />
+
+  </main>
 
   <footer>
+
+    <div class="social-media">
+
+      <button type="button" class="social-media-button">
+        <img alt="facebook icon" src="./resources/images/facebook-f.svg" />
+      </button>
+
+      <button type="button" class="social-media-button">
+        <img alt="twitter icon" src="./resources/images/twitter.svg" />
+      </button>
+
+      <button type="button" class="social-media-button">
+        <img alt="instagram icon" src="./resources/images/instagram.svg" />
+      </button>
+
+    </div>
+
+    <p class="copyright">&copy; Copyright Ping. All rights reserved.</p>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Frances McKenzie</a>.
     </p>
+
   </footer>
 </body>
 </html>
