--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <h1>We are launching <strong>soon!</strong></h1>
     <p>Subscribe and get notified</p>
 
-    <form action="" method="post">
-      <input type="email" id="email" name="email" placeholder="Your email address..." />
+    <form action="" method="post" id="email-form">
+      <input type="email" id="email" name="email" placeholder="Your email address..." required />
       <p class="error-message" id="email-error">Please provide a valid address</p>
       <button type="submit">Notify Me</button>
     </form>
@@ -55,5 +55,6 @@
     </p>
 
   </footer>
+  <script src="./resources/js/script.js"></script>
 </body>
 </html>
